[package]
name = "RocksDict"
version = "0.3.21"
edition = "2021"
description = "Rocksdb Python Binding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rocksdict"
crate-type = ["cdylib"]

[dependencies]
rocksdb = { git = "https://github.com/Congyuwang/rust-rocksdb", tag = "v0.22.0+8.10.0" }
librocksdb-sys = { git = "https://github.com/Congyuwang/rust-rocksdb", tag = "v0.22.0+8.10.0" }
pyo3-log = "0.9"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.87"
num-bigint = "^0.4.3"
libc = "0.2.112"

[dependencies.pyo3]
version = "0.20"
features = ["extension-module", "num-bigint"]
