[package]
name = "RocksDict"
version = "0.3.23"
edition = "2021"
description = "Rocksdb Python Binding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rocksdict"
crate-type = ["cdylib"]

[dependencies]
rocksdb = { git = "https://github.com/Congyuwang/rust-rocksdb", tag = "v0.22.0+9.0.0" }
librocksdb-sys = { git = "https://github.com/Congyuwang/rust-rocksdb", tag = "v0.22.0+9.0.0" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
libc = "0.2"

[dependencies.pyo3]
version = "0.21"
features = ["extension-module", "num-bigint"]

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
