[package]
name = "RocksDict"
version = "0.3.24-beta.2"
edition = "2021"
description = "Rocksdb Python Binding"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rocksdict"
crate-type = ["cdylib"]

[[bin]]
name = "create_cf_db"
path = "bin/create-cf-db/main.rs"
test = false

[dependencies]
rocksdb = { path = "rust-rocksdb" }
librocksdb-sys = { path = "rust-rocksdb/librocksdb-sys" }
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
libc = "0.2"

[dependencies.pyo3]
version = "0.21"
features = ["extension-module", "num-bigint"]

[profile.release]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
