[project]
name = "rocksdict"
version = "0.2.13"
description = "Rocksdb Python Binding"
long_description_content_type="text/markdown"
readme = "README.md"
keywords = ["rocksdb", "dbm", "dict", "key-value"]

classifiers=[
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"
